metadata/objects/SampleEvent__e.object
<CustomObject>
    <fields>
        <fullName>DeviceId__c</fullName>
        <label>DeviceId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SampleEvent</label>
    <pluralLabel>SampleEvents</pluralLabel>
</CustomObject>